src/test/ui/parser/macro/issue-37234.stderr
error: expected one of `.`, `;`, `?`, or an operator, found `""`
  --> $DIR/issue-37234.rs:3:19
   |
LL |         let x = 5 "";
   |                   ^^ expected one of `.`, `;`, `?`, or an operator here
...
LL |     failed!();
   |     ---------- in this macro invocation

error: aborting due to previous error

